--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
+    maven { url "https://jitpack.io" }
 }
 
 
@@ -37,6 +38,7 @@ dependencies {
     compile('com.alibaba:druid:1.1.8')
     compile('org.mybatis.caches:mybatis-ehcache:1.1.0')
     compile('joda-time:joda-time:2.10')
+    compile('com.github.SilenceDut:jpinyin:v1.0')
     runtime('mysql:mysql-connector-java')
     testCompile('org.springframework.boot:spring-boot-starter-test')
     testCompile('org.springframework.restdocs:spring-restdocs-mockmvc')
