增加地点静态图，优化优惠分类图片展示

--- a/src/main/resources/application-amap.yml
+++ b/src/main/resources/application-amap.yml
@@ -3,3 +3,4 @@ amap:
   inputtipsUrl: http://restapi.amap.com/v3/assistant/inputtips
   districtUrl: http://restapi.amap.com/v3/config/district
   aroundUrl: http://restapi.amap.com/v3/place/around
+  staticMapUrl: http://restapi.amap.com/v3/staticmap
