加入城市编码限制

--- a/src/main/resources/application-amap.yml
+++ b/src/main/resources/application-amap.yml
@@ -4,3 +4,4 @@ amap:
   districtUrl: http://restapi.amap.com/v3/config/district
   aroundUrl: http://restapi.amap.com/v3/place/around
   staticMapUrl: http://restapi.amap.com/v3/staticmap
+  regeoUrl: http://restapi.amap.com/v3/geocode/regeo
