--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,3 +20,7 @@ mybatis:
   mapper-locations: classpath:mappers/*Mapper.xml
   configuration:
     map-underscore-to-camel-case: true
+
+custom:
+  discount:
+    imageUrl: http://h5.duozouzou.top/images/%s.jpg
