增加用户服务协议，增强用户安全校验

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,3 +24,5 @@ mybatis:
 custom:
   discount:
     imageUrl: http://h5.duozouzou.top/images/%s.jpg
+  user:
+    agreementsUrl: //h5.duozouzou.top/user_agreements.html
