--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,7 +17,7 @@ server:
     uri-encoding: UTF-8
 
 mybatis:
-  mapper-locations: classpath:mappers/*Mapper.xml
+  mapper-locations: classpath:mappers/h5app/*Mapper.xml,classpath:mappers/sp/*Mapper.xml
   configuration:
     map-underscore-to-camel-case: true
 
