--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,12 +9,22 @@ spring:
     active: development
     include: amap
 
+  resources:
+    add-mappings: false
+
+  mvc:
+    favicon:
+      enabled: false
+
 server:
   port: 8080
   servlet:
     context-path:
   tomcat:
     uri-encoding: UTF-8
+  error:
+    whitelabel:
+      enabled: false
 
 mybatis:
   mapper-locations: classpath:mappers/h5app/*Mapper.xml,classpath:mappers/sp/*Mapper.xml
