--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,7 +27,7 @@ server:
       enabled: false
 
 mybatis:
-  mapper-locations: classpath:mappers/h5app/*Mapper.xml,classpath:mappers/sp/*Mapper.xml
+  mapper-locations: classpath:mappers/h5app/*Mapper.xml,classpath:mappers/sp/*Mapper.xml,classpath:mappers/mp/*Mapper.xml
   configuration:
     map-underscore-to-camel-case: true
 
