--- a/src/main/resources/application-production.yml
+++ b/src/main/resources/application-production.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/on_the_way?useUnicode=true&characterEncoding=utf-8&useSSL=false&zeroDateTimeBehavior=convertToNull
-    username: root
-    password: 123456
+    username: ${ONTHEWAY_MYSQL_USERNAME}
+    password: ${ONTHEWAY_MYSQL_PASSWORD}
     driver-class-name: com.mysql.jdbc.Driver
     type: com.alibaba.druid.pool.DruidDataSource
     # 下面为连接池的补充设置，应用到上面所有数据源中
