加入ios升级提醒；加入weixin跳转；加入商家负责人手机号码。

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -35,4 +35,4 @@ custom:
   discount:
     imageUrl: http://h5.jicu.vip/images/%s.jpg
   user:
-    agreementsUrl: //h5.jicu.vip/user_agreements.html
+    agreementsUrl: http://h5.jicu.vip/user_agreements.html
