--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     compile('org.mybatis.caches:mybatis-ehcache:1.1.0')
     compile('joda-time:joda-time:2.10')
     compile('com.github.SilenceDut:jpinyin:v1.0')
+    compile('cn.jpush.api:jpush-client:3.3.11')
     runtime('mysql:mysql-connector-java')
     testCompile('org.springframework.boot:spring-boot-starter-test')
     testCompile('org.springframework.restdocs:spring-restdocs-mockmvc')
