--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
 
   profiles:
     active: development
-    include: amap
+    include: amap, jpush
 
   resources:
     add-mappings: false
@@ -27,7 +27,7 @@ server:
       enabled: false
 
 mybatis:
-  mapper-locations: classpath:mappers/h5app/*Mapper.xml,classpath:mappers/sp/*Mapper.xml,classpath:mappers/mp/*Mapper.xml
+  mapper-locations: classpath:mappers/h5app/*Mapper.xml,classpath:mappers/sp/*Mapper.xml,classpath:mappers/mp/*Mapper.xml,classpath:mappers/push/*Mapper.xml
   configuration:
     map-underscore-to-camel-case: true
 
