加入经纬度转换；用户地址

--- a/src/main/resources/application-amap.yml
+++ b/src/main/resources/application-amap.yml
@@ -6,3 +6,4 @@ amap:
   staticMapUrl: http://restapi.amap.com/v3/staticmap
   regeoUrl: http://restapi.amap.com/v3/geocode/regeo
   searchTextUrl: https://restapi.amap.com/v3/place/text
+  coordinateConvertUrl: https://restapi.amap.com/v3/assistant/coordinate/convert
