--- a/src/main/resources/application-production.yml
+++ b/src/main/resources/application-production.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/on_the_way?useUnicode=true&characterEncoding=utf-8&useSSL=false&zeroDateTimeBehavior=convertToNull&serverTimezone=GMT%2B8
+    url: ${ONTHEWAY_MYSQL_URL}
     username: ${ONTHEWAY_MYSQL_USERNAME}
     password: ${ONTHEWAY_MYSQL_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
