--- a/src/main/resources/application-amap.yml
+++ b/src/main/resources/application-amap.yml
@@ -7,3 +7,4 @@ amap:
   regeoUrl: http://restapi.amap.com/v3/geocode/regeo
   searchTextUrl: https://restapi.amap.com/v3/place/text
   coordinateConvertUrl: https://restapi.amap.com/v3/assistant/coordinate/convert
+  geoUrl: https://restapi.amap.com/v3/geocode/geo
