--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,10 @@ buildscript {
         springBootVersion = '2.1.4.RELEASE'
     }
     repositories {
+        maven {
+            name "aliyunmaven"
+            url "http://maven.aliyun.com/nexus/content/groups/public/"
+        }
         mavenCentral()
     }
     dependencies {
