--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        springBootVersion = '2.1.4.RELEASE'
+        springBootVersion = '2.2.6.RELEASE'
     }
     repositories {
         maven {
@@ -35,21 +35,23 @@ repositories {
 
 dependencies {
     compile('org.apache.commons:commons-collections4:4.1')
-    compile('com.alibaba:fastjson:1.2.47')
+    compile('com.alibaba:fastjson:1.2.68')
     compile('com.github.dozermapper:dozer-core:6.2.0')
-    compile('com.squareup.okhttp3:okhttp:3.10.0')
+    compile('com.squareup.okhttp3:okhttp:3.14.1')
     compile('org.springframework.boot:spring-boot-starter-integration')
     compile('org.springframework.boot:spring-boot-starter-aop')
-    compile('org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.2')
+    compile('org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.5')
     compile('org.springframework.boot:spring-boot-starter-web')
-    compile('org.springframework.data:spring-data-commons:2.0.6.RELEASE')
-    compile('com.alibaba:druid:1.1.8')
+    compile('org.springframework.data:spring-data-commons:2.2.6.RELEASE')
+    compile('com.alibaba:druid:1.1.9')
     compile('com.aliyun:aliyun-java-sdk-dysmsapi:1.1.0')
     compile('com.aliyun:aliyun-java-sdk-core:3.7.1')
-    compile('org.mybatis.caches:mybatis-ehcache:1.1.0')
-    compile('joda-time:joda-time:2.10')
+    compile('org.mybatis.caches:mybatis-ehcache:1.2.0')
+    compile('joda-time:joda-time:2.10.5')
     compile('com.github.SilenceDut:jpinyin:v1.0')
     compile('cn.jpush.api:jpush-client:3.3.11')
+    compile('io.springfox:springfox-swagger2:2.9.2')
+    compile('com.github.ben-manes.caffeine:caffeine:2.8.1')
     runtime('mysql:mysql-connector-java')
     testCompile('org.springframework.boot:spring-boot-starter-test')
     testCompile('org.springframework.restdocs:spring-restdocs-mockmvc')
