--- a/openapi/mp/way_article_post.yaml
+++ b/openapi/mp/way_article_post.yaml
@@ -9,33 +9,7 @@ servers:
     description: api链接
 
 paths:
-  /sp/article:
-    post:
-      tags:
-        - "文章"
-      operationId: createArticle
-      summary: 创建一篇文章
-      description: 创建一篇文章
-      parameters:
-        - $ref: '#/components/parameters/X-userLoginId'
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/WayCreateArticlePostReq'
-      responses:
-        '200':
-          description: 创建一篇文章成功
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ApiResponseMessage'
-        '400':
-          description: 参数不正确，返回不通过原因
-        default:
-          description: 未知异常
-
+  /mp/article:
     get:
       tags:
         - "文章"
@@ -48,6 +22,12 @@ paths:
           description: 查询文章关键词
           schema:
             type: string
+        - name: postId
+          in: query
+          description: 文章id
+          schema:
+            type: integer
+            format: int64
         - $ref: '#/components/parameters/page'
         - $ref: '#/components/parameters/pageSize'
       responses:
@@ -64,7 +44,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/ApiResponseMessage'
 
-  /sp/article/{postId}:
+  /mp/article/{postId}:
     get:
       tags:
         - "文章"
@@ -105,69 +85,29 @@ paths:
         '500':
           description: 未知异常
 
+  /mp/article/audit/{postId}:
     put:
       tags:
         - "文章"
-      operationId: updateArticle
-      summary: 修改一篇文章
-      description: 修改一篇文章
+      operationId: auditArticle
+      summary: 审核一篇文章
+      description: 审核一篇文章
       requestBody:
         required: true
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/WayUpdateArticlePostReq'
+              $ref: '#/components/schemas/WayAuditArticlePostReq'
       parameters:
         - $ref: '#/components/parameters/postId'
         - $ref: '#/components/parameters/X-userLoginId'
       responses:
         '200':
-          description: 修改一篇文章成功
+          description: 审核一篇文章成功
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/ApiResponseMessage'
-        '404':
-          description: 文章不存在
-        '500':
-          description: 未知异常
-
-  /sp/article/token:
-    get:
-      tags:
-        - 文章
-      operationId: getToken
-      summary: 获取token
-      description: 获取token
-      parameters:
-        - $ref: '#/components/parameters/X-userLoginId'
-      responses:
-        '200':
-          description: 返回token成功
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/WayArticlePostToken'
-        '500':
-          description: 未知异常
-
-  /sp/article/audit/{postId}:
-    get:
-      tags:
-        - "文章"
-      operationId: getArticleRejectContent
-      summary: 获取指定{postId}文章驳回原因
-      description: 获取指定{postId}文章驳回原因
-      parameters:
-        - $ref: '#/components/parameters/postId'
-        - $ref: '#/components/parameters/X-userLoginId'
-      responses:
-        '200':
-          description: 返回文章驳回原因
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/WayArticlePostRejectResp'
         '404':
           description: 文章不存在
         '500':
@@ -210,38 +150,16 @@ components:
         format: int32
         default: 10
   schemas:
-    WayCreateArticlePostReq:
+    WayAuditArticlePostReq:
       properties:
-        subject:
-          type: string
-        postContent:
-          type: string
-        commodityId:
-          type: integer
-          format: int64
-        postToken:
-          type: string
-      required:
-        - subject
-        - postContent
-        - commodityId
-        - postToken
-
-    WayUpdateArticlePostReq:
-      properties:
-        subject:
-          type: string
-        commodityId:
-          type: integer
-          format: int64
-        postContent:
-          type: string
-        enableSubmit:
+        pass:
           type: integer
           format: int32
           default: 0
+        rejectContent:
+          type: string
       required:
-        - enableSubmit
+        - pass
 
     WayQueryArticlePostResp:
       properties:
@@ -272,14 +190,6 @@ components:
         postStatus:
           type: integer
           format: int32
-        preAction:
-          type: integer
-          format: int32
-
-    WayArticlePostToken:
-      properties:
-        token:
-          type: string
 
     ApiResponseMessage:
       properties:
@@ -289,9 +199,4 @@ components:
         type:
           type: string
         message:
-          type: string
-
-    WayArticlePostRejectResp:
-      properties:
-        rejectContent:
           type: string
