--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,11 @@
 buildscript {
     ext {
-        springBootVersion = '2.2.6.RELEASE'
+        springBootVersion = '2.4.10'
     }
     repositories {
         maven {
             name "aliyunmaven"
-            url "http://maven.aliyun.com/nexus/content/groups/public/"
+            url "https://maven.aliyun.com/nexus/content/groups/public/"
         }
         mavenCentral()
     }
@@ -26,7 +26,7 @@ sourceCompatibility = 1.8
 repositories {
     maven {
         name "aliyunmaven"
-        url "http://maven.aliyun.com/nexus/content/groups/public/"
+        url "https://maven.aliyun.com/nexus/content/groups/public/"
     }
     //mavenCentral()
     maven { url "https://jitpack.io" }
@@ -34,25 +34,28 @@ repositories {
 
 
 dependencies {
-    compile('org.apache.commons:commons-collections4:4.1')
-    compile('com.alibaba:fastjson:1.2.68')
-    compile('com.github.dozermapper:dozer-core:6.2.0')
-    compile('com.squareup.okhttp3:okhttp:3.14.1')
-    compile('org.springframework.boot:spring-boot-starter-integration')
-    compile('org.springframework.boot:spring-boot-starter-aop')
-    compile('org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.5')
-    compile('org.springframework.boot:spring-boot-starter-web')
-    compile('org.springframework.data:spring-data-commons:2.2.6.RELEASE')
-    compile('com.alibaba:druid:1.1.9')
-    compile('com.aliyun:aliyun-java-sdk-dysmsapi:1.1.0')
-    compile('com.aliyun:aliyun-java-sdk-core:3.7.1')
-    compile('org.mybatis.caches:mybatis-ehcache:1.2.0')
-    compile('joda-time:joda-time:2.10.5')
-    compile('com.github.SilenceDut:jpinyin:v1.0')
-    compile('cn.jpush.api:jpush-client:3.3.11')
-    compile('io.springfox:springfox-swagger2:2.9.2')
-    compile('com.github.ben-manes.caffeine:caffeine:2.8.1')
-    runtime('mysql:mysql-connector-java')
-    testCompile('org.springframework.boot:spring-boot-starter-test')
-    testCompile('org.springframework.restdocs:spring-restdocs-mockmvc')
+    implementation('org.apache.commons:commons-collections4:4.1')
+    implementation('com.alibaba:fastjson:1.2.68')
+    implementation('com.github.dozermapper:dozer-core:6.2.0')
+    implementation('com.squareup.okhttp3:okhttp:3.14.1')
+    implementation('org.springframework.boot:spring-boot-starter-integration')
+    implementation('org.springframework.boot:spring-boot-starter-aop')
+    implementation('org.springframework.boot:spring-boot-starter-validation')
+    implementation('org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.5')
+    implementation('org.springframework.boot:spring-boot-starter-web')
+    implementation('org.springframework.data:spring-data-commons:2.3.9.RELEASE')
+    implementation('com.alibaba:druid:1.1.9')
+    implementation('com.aliyun:aliyun-java-sdk-dysmsapi:1.1.0')
+    implementation('com.aliyun:aliyun-java-sdk-core:3.7.1')
+    implementation('org.mybatis.caches:mybatis-ehcache:1.2.0')
+    implementation('joda-time:joda-time:2.10.5')
+    implementation('com.github.SilenceDut:jpinyin:v1.0')
+    implementation('cn.jpush.api:jpush-client:3.3.11')
+    implementation('javax.xml.bind:jaxb-api:2.3.0')
+    implementation('io.springfox:springfox-swagger2:2.9.2')
+    implementation('com.github.ben-manes.caffeine:caffeine:2.8.1')
+    implementation('mysql:mysql-connector-java')
+    testImplementation('org.springframework.boot:spring-boot-starter-test')
+    testImplementation('org.springframework.restdocs:spring-restdocs-mockmvc')
+    testImplementation 'junit:junit:4.12'
 }
